<resources>
    <string name="app_name">WashWiz</string>
    <string name="logo">logo</string>
    <string name="title">WashWiz</string>
    <string name="slogan">Simplifying Laundry, One Click at a Time</string>
    <string name="login">Login</string>
    <string name="email_address_placeholder">Enter your email</string>
    <string name="email">Email</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="signup_link">Don\'t have an account? <u>Sign up</u></string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="login_link">Already have an account? <u>Login</u></string>
    <string name="register_button">Register</string>
    <string name="name_placeholder">Name</string>
    <string name="contact_number_placeholder">Contact Number</string>
    <string name="address_placeholder">Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_password">Change Password</string>
    <string name="submit_button">Submit</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_and_conditions_icon">terms and conditions icon</string>
    <string name="tnc_warning">By continuing, you Agree to our Terms of Use and have read the Privacy Policy.</string>
    <string name="email_placeholder">Email</string>
    <string name="signup_password_placeholder">Password</string>
    <string name="pick_date">Choose preferred date</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="continue_button">Continue</string>
    <string name="image_button_description">Next page</string>
    <string name="schedule_a_pickup">Schedule a Pickup</string>
    <string name="heading_one">Free Up Your Time</string>
    <string name="heading_two">Order with Ease</string>
    <string name="heading_three">Convenient Pickups &amp; Deliveries </string>
    <string name="desc_one">Spend less time sorting, washing, and folding laundry. WashWiz gives you back valuable time to relax, pursue hobbies, or spend time with loved ones</string>
    <string name="desc_two">Our user-friendly app makes doing laundry a breeze. Simply choose a service, select a schedule, and track your order status all from your phone!</string>
    <string name="desc_three">No more trips to the laundromat! Schedule a convenient pickup time, we\'ll pick up your laundry, and deliver it directly to your doorstep</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="services">Our Services</string>
    <string name="washwiz">WashWiz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_description">company logo\n</string>
    <string name="carousel_of_featured_images">Carousel of featured images</string>
    <string name="aboutusdesc">WashWiz is an innovative laundry delivery application that aims to transform the way people manage their laundry needs. We provide a seamless, stress-free laundry experience.</string>
    <string name="about">About Us</string>
    <string name="our_services">Our Services</string>
    <string name="regular_wash_icon">Regular Wash Icon</string>
    <string name="regular_wash_service">Regular Wash Service</string>
    <string name="regularprice">Wash - ₱65.00\nDry - ₱70.00\nFull Service - ₱165.00</string>
    <string name="dry_clean_icon">Dry Clean Icon</string>
    <string name="dry_clean">Dry Clean</string>
    <string name="dryCleanPrice">Barong/Tops/Coat - ₱250.00\nDress/Terno - ₱450.00\nShoes/Bag - Starts at ₱500</string>
    <string name="executive_wash_icon">Executive Wash Icon</string>
    <string name="executive_wash">Executive Wash</string>
    <string name="executivePrice">Wash/Dry + Steam - ₱30/pc.\nWash/Dry + Treatment - ₱25/pc.</string>
    <string name="special_wash_icon">Special Wash Icon</string>
    <string name="special_wash">Special Wash</string>
    <string name="specialPrice">Warm Wash - ₱80.00\nHot Wash - ₱90.00\nDisinfect Wash - ₱120.00</string>
    <string name="comforter_bulky_icon">Comforter/Bulky Icon</string>
    <string name="comforter_bulky">Comforter/Bulky</string>
    <string name="bulkyPrice">Wash + Dry - ₱160.00\nWash + Dry + Fold - ₱185.00</string>
    <string name="add_ons_icon">Add Ons Icon</string>
    <string name="add_ons">Add Ons</string>
    <string name="AddOnsPrice">Add Wash - ₱20.00\nAdd Rinse - ₱20.00\nAdd Dry - ₱20.00</string>
    <string name="contact_us">Contact Us</string>
    <string name="profile">profile icon</string>
    <string name="about_us_icon">about us icon</string>
    <string name="address_icon">address icon</string>
    <string name="address">Unit 2 #54 Magsaysay Road, Brgy. San Antonio, San Pedro, Laguna</string>
    <string name="phone_icon">phone icon</string>
    <string name="phone">Call 0948 526 7237 / 0945 425 2751 / 028 742 7577</string>
    <string name="washEmail">info@washwiz.com</string>
    <string name="email_icon">email icon</string>
    <string name="workHours">Mon-Sun: 8:00 am - 7:00 pm</string>
    <string name="working_hours_icon">working hours icon</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="proof_of_payment">Upload proof of payment (png/jpg)</string>
    <string name="reference_number">Enter reference number</string>
    <string name="scan_gcash">Scan GCash QR Code</string>
    <string name="gcash_qr_code">GCash QR Code</string>
    <string name="order_details">Order Details</string>
    <string name="place_order">Place Order</string>
    <string name="account_settings">Account Settings</string>
    <string name="log_out">Log Out</string>
    <string name="official_receipt">Official Receipt</string>
    <string name="item">Item#</string>
    <string name="track_my_order">Track My Order</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="choose_pickup">Choose Pickup Location</string>
    <string name="confirm">Confirm</string>
    <string name="choose_new_pickup"><u>Choose another pickup location</u></string>
    <string name="proceed">Proceed</string>
    <string name="add_pickup_location">Add Pickup Location</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="no_of_loads">Enter how many kg of clothes</string>
    <string name="type_of_clothes">Type of Clothes</string>
    <string name="laundry_service">Laundry Service</string>
    <string name="addOns_optional">Add On/s (optional)</string>
    <string name="note_to_staff">Note to Staff (optional)</string>
    <string name="chosen_date_format">%1$d-%2$d-%3$d</string>
    <string name="chosen_time_format">%1$02d:%2$02d</string>
    <string name="no_current_orders_found">No current orders found</string>
    <string name="no_of_pcs">How Many Pieces?</string>
    <string name="washwiz_tagline">WashWiz: Simplifying Laundry, One Click at a Time</string>
    <string name="thank_you">Thank You!</string>
    <string name="take_a_screenshot">Take a screenshot of this receipt for safekeeping.</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="my_order_history"><u>My Order History</u></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="image_selected">Image Selected</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_status">Order Status:  </string>
    <string name="back_to_home"><u>Back to Home</u></string>
    <string name="order_status_cancelled">Cancelled</string>
    <string name="my_orders">My Orders</string>
    <string name="total_amount_due">Total Amount Due:</string>
    <string name="laundryService">Laundry Service:</string>
    <string name="leave_a_comment">Leave a comment (optional)</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="how_was_your_experience">How was your experience?</string>
    <string name="order_received">Order Received</string>
    <string name="order_status_completed">Completed</string>
    <string name="enter_new_address">Enter new address</string>
    <string name="enter_new_contact">Enter new contact number</string>
    <string name="total_cost_not_available">Total Cost: Not available</string>
    <string name="rewards_points_display">Rewards points display</string>
    <string name="rewards">Rewards</string>
    <string name="avail">Avail</string>
    <string name="ten_points">10 Points:</string>
    <string name="four_discount">4% Discount</string>
    <string name="six_discount">6% Discount</string>
    <string name="twenty_points">20 Points:</string>
    <string name="thirty_points">30 Points:</string>
    <string name="eight_discount">8% Discount</string>
    <string name="forty_points">40 Points:</string>
    <string name="ten_discount">10% Discount</string>
    <string name="fifty_points">50 Points:</string>
    <string name="twelve_discount">12% Discount</string>
    <string name="sixty_points">60 Points:</string>
    <string name="fourteen_discount">14% Discount</string>
    <string name="seventy_points">70 Points:</string>
    <string name="sixteen_discount">16% Discount</string>
    <string name="eighteen_discount">18% Discount</string>
    <string name="eighty_points">80 Points:</string>
    <string name="ninety_points">90 Points:</string>
    <string name="twenty_discount">20% Discount</string>
    <string name="twenty_two_discount">22% Discount</string>
    <string name="one_hundred_points">100 Points:</string>
    <string name="no_rewards_available">No rewards available</string>
    <string name="bubbles">bubbles</string>
    <string name="receive_by_invalid_time">Receive by: Invalid time</string>
    <string name="quantity">Qty</string>
    <string name="add">Add Item</string>
    <string name="delete_btn">Delete</string>
    <string name="clean_and_fresh_clothes"><![CDATA[Clean & Fresh Clothes]]></string>
    <string name="no_damage_to_clothes">No Damage to Clothes</string>
    <string name="quick_service">Quick Service</string>
    <string name="on_time_pickup">On-Time Pickup</string>
    <string name="on_time_delivery">On-Time Delivery</string>
    <string name="easy_to_use">Easy to Use</string>
    <string name="easy_scheduling">Easy Scheduling</string>
    <string name="highly_recommend">Highly Recommend</string>
    <string name="vehicle_unavailable">Vehicle: Unavailable</string>
    <string name="plate_unavailable">Plate: Unavailable</string>
    <string name="contact_unavailable">Contact: Unavailable</string>
    <string-array name="clothing_type_options">
        <item>Cotton/Silky</item>
        <item>Comforter/Bulky</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="cotton_silky_options">
        <item>Shirts</item>
        <item>Pants</item>
        <item>Shorts</item>
        <item>Underwear</item>
        <item>Skirts</item>
        <item>Pajamas</item>
        <item>Socks</item>
    </string-array>
    <string-array name="shirts_options">
        <item>T-Shirts</item>
        <item>Button-Downs</item>
        <item>Polo Shirts</item>
        <item>Tank Tops/Sandos</item>
        <item>Sweaters</item>
    </string-array>
    <string-array name="pants_options">
        <item>Jogging Pants</item>
        <item>Denim Pants</item>
        <item>Non-Denim Pants</item>
        <item>Trousers</item>
        <item>Leggings</item>
    </string-array>
</resources>