<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/nav_services"
            android:title="@string/services"/>

        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/nav_about"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/nav_account"
            android:title="@string/account" />

    </group>
    <item android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>
