<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".AccountSettingScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/account_settings"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="30sp">
        </TextView>

        <TextView
            android:id="@+id/account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:textAlignment="textStart"
            android:text="@string/name"
            android:textColor="@color/blue"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/account_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:textAlignment="textStart"
            android:text="@string/email"
            android:textColor="@color/blue"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/account_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:textAlignment="textStart"
            android:text="@string/address_placeholder"
            android:textColor="@color/blue"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/account_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:textAlignment="textStart"
            android:text="@string/contact"
            android:textColor="@color/blue"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:id="@+id/order_history_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/my_order_history"
            android:textColor="@color/blue"
            android:textSize="16sp">
        </TextView>

        <TextView
            android:id="@+id/edit_profile_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/edit_profile"
            android:textColor="@color/blue"
            android:textSize="20sp">
        </TextView>

        <EditText
            android:id="@+id/change_address"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="Text"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_new_address"
            android:inputType="textPostalAddress"
            android:padding="8dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            android:textColor="@color/black">
        </EditText>

        <EditText
            android:id="@+id/change_contact"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="Contact Number"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/poppins"
            android:hint="@string/enter_new_contact"
            android:inputType="phone"
            android:padding="8dp"
            android:textColorHint="#757575"
            android:textSize="16sp"
            android:textColor="@color/black">
        </EditText>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins"
            android:text="@string/submit_button"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="10dp">
        </Button>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="10dp">
        </Button>

    </LinearLayout>

</LinearLayout>