<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".TermsNConditionsScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/terms_amp_conditions"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="30sp">
    </TextView>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/tnc_icon"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/terms_and_conditions_icon">
    </ImageView>

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/tnc_warning"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck">
    </TextView>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins"
        android:text="@string/continue_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp">
    </Button>

</LinearLayout>