<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".SignUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="36sp">
        </TextView>

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:autofillHints="name"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/poppins"
            android:hint="@string/name_placeholder"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColorHint="#757575"
            android:textColor="@color/black">
        </EditText>

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_placeholder"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColorHint="#757575"
            android:textColor="@color/black">
        </EditText>

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:background="@drawable/custom_edittext"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            android:fontFamily="@font/poppins"
            android:hint="@string/signup_password_placeholder"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColorHint="#757575"
            android:textColor="@color/black">
        </EditText>

        <EditText
            android:id="@+id/signup_contact"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="phone"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/poppins"
            android:hint="@string/contact_number_placeholder"
            android:inputType="phone"
            android:padding="8dp"
            android:textColorHint="#757575"
            android:textColor="@color/black">
        </EditText>

        <EditText
            android:id="@+id/signup_address"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="postalAddress"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/poppins"
            android:hint="@string/address_placeholder"
            android:inputType="textPostalAddress"
            android:padding="8dp"
            android:textColorHint="#757575"
            android:textColor="@color/black">
        </EditText>

        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins"
            android:text="@string/register_button"
            android:textSize="22sp"
            android:textColor="@color/white"
            app:cornerRadius="10dp">
        </Button>

        <TextView
            android:id="@+id/login_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/login_link"
            android:textColor="@color/blue">
        </TextView>


    </LinearLayout>

</LinearLayout>